# najork

./: .coverage  .env  .envrc  .gitignore  Makefile  Pipfile  README.md  com.verynoisy.najork.yml  dev-requirements.txt  meson.build  pyproject.toml  requirements.txt
data/: com.verynoisy.najork.appdata.xml.in  com.verynoisy.najork.desktop.in  com.verynoisy.najork.gschema.xml  meson.build
data/icons/: meson.build
docs/: benchmarking.md  example_2.yml
docs/examples/: example_2.yml  simple_example_1.yml
docs/examples/bespoke_synth/: adsr.pd  simple_example_2.yml
docs/examples/simple_example_1/: simple_example_1.pd
docs/examples/simple_example_2/: simple_example_2.pd  simple_example_2.yml
docs/modeling/: classes.gaphor
najork/: config.py  engine_sched.py  entities.py  main.py  message_utils.py  osc.py  renderer.py  scene.py  scene_view.py  window.py  window.ui
po/: POTFILES  meson.build
src/: main.py  meson.build  najork.in  window.py  window.ui
src/najork/: config.py  engine_sched.py  main.py  meson.build  najork.gresource.xml  window.py  window.ui
tests/: conftest.py  test_engine_sched.py  test_entities.py  test_integrations.py  test_osc_msg.py  test_scene.py
tests/input/: big_1.yml  simple_1.yml  simple_2.yml
