[tool.poetry]
name = "najork"
version = "0.1.0"
description = ""
authors = ["Mark Kennedy <mark@verynoisy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pycairo = "^1.21.0"
PyGObject = "^3.42.0"
Shapely = "^1.8.1"
Jinja2 = "^3.1.1"
PyYAML = "^6.0"
py-expression-eval = "^0.3.14"
oscpy = "^0.6.0"
python-rtmidi = "^1.4.9"
mido = "^1.2.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-coverage = "^0.0"
pylint = "^2.13.5"
flake8 = "^4.0.1"
ipython = "^8.2.0"
pytest-asyncio = "^0.18.3"
python-rtmidi = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
